import "google/protobuf/empty.proto";

import "user-events.proto";
import "../common/common.proto";

syntax = "proto3";

package user;

message RenameUser {
  string userId = 1;
  string username = 2;
}

message RequestDeletion {
  string userId = 1;
}

message ConfirmDeletion {
  string token = 1;
}

message RequestEmailChange {
  string userId = 1;
  string newEmail = 2;
}

message ConfirmEmailChange {
  string token = 1;
}


service UserCommands {
  rpc rename(RenameUser) returns (google.protobuf.Empty);
  rpc requestDeletion(RequestDeletion) returns (google.protobuf.Empty);
  rpc confirmDeletion(ConfirmDeletion) returns (google.protobuf.Empty);
  rpc requestEmailChange(RequestEmailChange) returns (google.protobuf.Empty);
  rpc confirmEmailChange(ConfirmEmailChange) returns (google.protobuf.Empty);

  rpc getEvents(GetEvents) returns (UserEvents);
  rpc getPrivateEvents(GetEvents) returns (PrivateUserEvents);
}