syntax = "proto3";

package user;

message UserEvents {
  repeated UserEvent events = 1;
}

message PrivateUserEvents {
  repeated PrivateUserEvent events = 1;
}

message UserEvent {
  string id = 1;
  string streamId = 2;
  int32 version = 3;
  string name = 4;
  string insertedAt = 5;
  int32 sequence = 6;
  UserEventData data = 7;
}

message PrivateUserEvent {
  string id = 1;
  string streamId = 2;
  int32 version = 3;
  string name = 4;
  string insertedAt = 5;
  int32 sequence = 6;
  PrivateUserEventData data = 7;
}

message UserEventData {
  oneof data {
    UserCreatedEvent created = 1;
    RenamedEvent renamed = 2;
    DeletionRequestedEvent deletionRequested = 3;
    DeletionConfirmedEvent deletionConfirmed = 4;
  }
}

message PrivateUserEventData {
  oneof data {
    PrivateUserCreatedEvent created = 1;
    EmailChangeRequestedEvent emailChangeRequested = 2;
    EmailChangeConfirmedEvent emailChangeConfirmed = 3;
    PrivateUserDeletedEvent deleted = 4;
  }
}

message UserCreatedEvent {
  string id = 1;
  string username = 2;
  string createdAt = 3;
}

message RenamedEvent {
  string username = 1;
}

message DeletionRequestedEvent {
  string requestedAt = 1;
  string userId = 2;
}

message DeletionConfirmedEvent {
  string deletedAt = 1;
}

message PrivateUserCreatedEvent {
  string id = 1;
  string email = 2;
}

message EmailChangeRequestedEvent {
  string newEmail = 1;
}

message EmailChangeConfirmedEvent {}

message PrivateUserDeletedEvent {
  string deletedAt = 1;
}